terraform/private-subnet.tf
/* Private subnet */
resource "aws_subnet" "private" {
  vpc_id                  = aws_vpc.default.id
  cidr_block              = var.private_subnet_cidr
  availability_zone       = var.az
  map_public_ip_on_launch = false
  depends_on              = [aws_instance.nat]
  tags = {
    Name = "my private subnet"
  }
}

/* Routing table for private subnet */
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.default.id
  route {
    cidr_block  = "0.0.0.0/0"
    gateway_id = aws_instance.nat.id
  }
  tags = {
    Name = "my private RT"
  }
}

/* Associate the routing table to private subnet */
resource "aws_route_table_association" "private" {
  subnet_id      = aws_subnet.private.id
  route_table_id = aws_route_table.private.id
}
